fix: add z-index to BBackTop

--- a/src/client/components/BBackTop.less
+++ b/src/client/components/BBackTop.less
@@ -7,6 +7,7 @@
   height: 0px;
   bottom: 60px;
   right: 20px;
+  z-index: 1500;
 
   .BBackTop__container {
     position: relative;
